ui(navigation_icons): use span icons which are bolder [asked by design]. ensure next/prev links are always on oneline, make back button bigger [same as design], align back/next/prev to top when there is more than oneline for h1 [either procedure name, either dossier name]

--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -393,3 +393,7 @@ ul.dropdown-items {
     content: none !important;
   }
 }
+
+.back-btn {
+  line-height: 1.75rem;
+}
